[bp/r47346][FIX] tabcontent z-index was too high (there's no need to specify this in a theme stylesheet in any case). Good catch by Pete and Jonny.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/9.x@47348 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/tikinewt.css
+++ b/styles/tikinewt.css
@@ -999,7 +999,6 @@ td.third {
 }
 
 .tabcontent {
-	z-index: 200;
 	border: 1px solid #225566 !important;
 	border-top: none !important;
 	padding: 6px 2px 2px 2px;
